--- a/TNM048-Handledning1Post/css/main.css
+++ b/TNM048-Handledning1Post/css/main.css
@@ -63,43 +63,43 @@ font: 10px sans-serif;
 
 
 .brush .extent {
-fill-opacity: .3;
-stroke: #fff;
-shape-rendering: crispEdges;
+  fill-opacity: .3;
+  stroke: #fff;
+  shape-rendering: crispEdges;
 }
 
 .axis line,
 .axis path {
-fill: none;
-stroke: #000;
-shape-rendering: crispEdges;
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
 }
 
 .axis text {
-text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
-cursor: move;
+  text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
+  cursor: move;
 }
 
-#tooltip, #color-info{
-        height: 270px;
-        background-color: white;
-        -webkit-border-radius: 10px;
-        -moz-border-radius: 10px;
-        border-radius: 10px;
-        -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
-        -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
-        box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
-        pointer-events: none;
-        opacity: 0.8;
+#tooltip{
+  height: 270px;
+  background-color: white;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+  pointer-events: none;
+  opacity: 0.8;
 }
 #tooltip p {
-    margin: 0;
-    font-family: sans-serif;
-    font-size: 14px;
-    line-height: 30px;
+  margin: 0;
+  font-family: sans-serif;
+  font-size: 14px;
+  line-height: 30px;
 }
-#tooltip, #color-info{
-    margin-top: 20px;
-    position: relative;
-    width: auto;
+#tooltip, #dropdownMeny{
+  margin-top: 20px;
+  position: relative;
+  width: auto;
 }      
